# android_packages_modules_Bluetooth

./: Android.bp  Cargo.toml  OWNERS  OWNERS_automotive  OWNERS_content  OWNERS_cs  OWNERS_leaudio  PREUPLOAD.cfg  README.md  TEST_MAPPING  build.py  checkstyle.xml  checkstyle_suppressions.xml
android/BluetoothLegacyMigration/: OWNERS
android/ChannelSoundingTestApp/: Android.bp  OWNERS  README  build.gradle.kts  com.android.bluetooth.channelsoundingtestapp.xml  settings.gradle.kts
android/apishim/: OWNERS
android/app/: Android.bp  AndroidManifest.xml  OWNERS  lint-baseline.xml
android/pandora/: OWNERS  gen_cov.py
apex/: Android.bp
flags/: Android.bp  BUILD.gn  a2dp.aconfig  aconfig.gni  asha.aconfig  audio_routing.aconfig  avrcp.aconfig  avrcp_controller.aconfig  bta_dm.aconfig  btif_dm.aconfig  btm_ble.aconfig  connectivity.aconfig  content_profiles.aconfig  device_iot_config.aconfig  did.aconfig  discovery_service.aconfig  dumpsys.aconfig  framework.aconfig  gap.aconfig  hal.aconfig  hap.aconfig  hfp.aconfig  hid.aconfig  l2cap.aconfig  le_advertising.aconfig  leaudio.aconfig  map.aconfig  mapclient.aconfig  mcp.aconfig  metric.aconfig  opp.aconfig  pairing.aconfig  ranging.aconfig  rfcomm.aconfig  rnr.aconfig  sdp.aconfig  security.aconfig  sniff.aconfig  sockets.aconfig  system_service.aconfig  (+2 more)
flags/exported_include/: android_bluetooth_flags.h
floss/android-base/: BUILD.gn  properties.cc
floss/hcidoc/: Cargo.toml
floss/libflags/: BUILD.gn  get_flags.cc
framework/: Android.bp  OWNERS  jarjar-rules.txt
framework/api/: current.txt  system-current.txt  system-lint-baseline.txt
pandora/: OWNERS
service/: Android.bp  OWNERS  build.gradle.kts  generate_local_coverage.sh  kls-classpath  lint-baseline.xml  settings.gradle.kts
service/aidl/: Android.bp
service/change-ids/: Android.bp
service/fake_app/: Android.bp
service/src/: AdapterBinder.kt  AutoOnFeature.kt  AutoOnFeatureTest.kt  BleScanSettingListener.kt  BleScanSettingListenerTest.kt  BluetoothService.kt  Log.kt  LogTest.kt  RadioModeListener.kt  RadioModeListenerTest.kt
service/tests/: Android.bp  AndroidTest.xml
sysprop/: Android.bp  BUILD.gn  ble.sysprop  device_id.sysprop  hfp.sysprop  sysprop.gni
sysprop/exported_include/: android_bluetooth_sysprop.h
system/: Android.bp  Android.mk  BUILD.gn  OWNERS  setup.py
system/audio/: Android.bp  BUILD.gn
system/audio_a2dp_hw/: Android.bp
system/audio_bluetooth_hw/: Android.bp  audio_bluetooth_hw.cc  device_port_proxy.cc  device_port_proxy_hidl.cc  stream_apis.cc  utils.cc
system/audio_hal_interface/: Android.bp  BUILD.gn  a2dp_encoding.cc  a2dp_encoding.h  a2dp_encoding_host.cc  audio_linux.h  hal_version_manager.cc  hal_version_manager.h  hal_version_manager_host.cc  hfp_client_interface.cc  hfp_client_interface.h  hfp_client_interface_host.cc  le_audio_software.cc  le_audio_software.h  le_audio_software_host.cc  le_audio_software_host.h  le_audio_software_host_transport.cc  le_audio_software_host_transport.h  le_audio_software_unittest.cc
system/audio_hearing_aid_hw/: Android.bp
system/bta/: Android.bp  BUILD.gn
system/btcore/: Android.bp  BUILD.gn
system/btif/: Android.bp  BUILD.gn
system/common/: Android.bp  BUILD.gn  address_obfuscator.cc  address_obfuscator.h  base_bind_unittest.cc  leaky_bonded_queue_unittest.cc  lru.h  lru_unittest.cc  message_loop_thread.cc  message_loop_thread.h  message_loop_thread_unittest.cc  metric_id_allocator.cc  metric_id_allocator_unittest.cc  metrics.cc  metrics.h  metrics_linux.cc  metrics_unittest.cc  repeating_timer.cc  repeating_timer.h  repeating_timer_unittest.cc  state_machine.h  stop_watch_legacy.cc  time_util.cc  time_util.h  utils.h
system/conf/: bt_stack.conf  interop_database.conf
system/device/: Android.bp  BUILD.gn
system/gd/: Android.bp  BUILD.gn  module.cc  module.h  module_dumper.cc  module_dumper.h  module_gdx_unittest.cc  module_gdx_unittest.h  module_jniloop.h  module_jniloop_unittest.cc  module_jniloop_unittest.h  module_mainloop.h  module_mainloop_unittest.cc  module_state_dumper.cc  module_state_dumper.h  module_state_dumper_unittest.cc  module_state_dumper_unittest.h  module_unittest.cc  stack_manager.cc
system/gd/packet/parser/: Android.bp  custom_field_def.cc  custom_field_def.h  enum_gen.cc  gen_cpp.cc  main.cc  packet_def.cc  packet_dependency.h  packetgen.gni  parent_def.cc  parent_def.h  struct_def.cc  util.h
system/gd/packet/parser/fields/: array_field.cc  vector_field.cc
system/gd/packet/parser/test/: generated_packet_test.cc  test_packets.pdl  variable.cc
system/gd/rust/topshim/: Android.bp  BUILD.gn  Cargo.toml  build.rs
system/gd/rust/topshim/btav/: btav_shim.cc
system/gd/rust/topshim/btav_sink/: btav_sink_shim.cc  btav_sink_shim.h
system/gd/rust/topshim/btif/: btif_shim.cc
system/gd/rust/topshim/controller/: controller_shim.cc  controller_shim.h
system/gd/rust/topshim/csis/: csis_shim.cc  csis_shim.h
system/gd/rust/topshim/facade/: Android.bp
system/gd/rust/topshim/facade/src/: adapter_service.rs  gatt_service.rs
system/gd/rust/topshim/gatt/: gatt_ble_advertiser_shim.cc  gatt_ble_advertiser_shim.h  gatt_ble_scanner_shim.cc  gatt_ble_scanner_shim.h  gatt_shim.cc
system/gd/rust/topshim/hfp/: hfp_shim.cc
system/gd/rust/topshim/le_audio/: le_audio_shim.cc  le_audio_shim.h
system/gd/rust/topshim/macros/src/: lib.rs
system/gd/rust/topshim/metrics/: metrics_shim.cc  metrics_shim.h
system/gd/rust/topshim/src/: btif.rs  controller.rs  lib.rs  metrics.rs  syslog.rs  sysprop.rs
system/gd/rust/topshim/src/profiles/: a2dp.rs  avrcp.rs  csis.rs  gatt.rs  hfp.rs  hid_host.rs  le_audio.rs  mod.rs  socket.rs  vc.rs
system/gd/rust/topshim/vc/: vc_shim.cc  vc_shim.h
system/hci/: Android.bp  BUILD.gn
system/include/: check.h  macros.h  notreached.h
system/internal_include/: bt_target.h  bt_trace.h
system/log/: Android.bp  BUILD.gn  OWNERS
system/log/include/bluetooth/: log.h
system/log/src/: truncating_buffer.h  truncating_buffer_test.cc  vlog_android.cc  vlog_syslog.cc  vlog_test.cc
tools/: OWNERS
tools/lint/: OWNERS  (+2 more)
(+2609 files in other folders)
