import("//bt/flags/aconfig.gni")

aconfig("bluetooth_flags_c_lib") {
  # LINT.IfChange
  sources = [
    "a2dp.aconfig",
    "asha.aconfig",
    "audio_routing.aconfig",
    "avrcp.aconfig",
    "avrcp_controller.aconfig",
    "bta_dm.aconfig",
    "btif_dm.aconfig",
    "btm_ble.aconfig",
    "connectivity.aconfig",
    "device_iot_config.aconfig",
    "did.aconfig",
    "discovery_service.aconfig",
    "dumpsys.aconfig",
    "framework.aconfig",
    "gap.aconfig",
    "hal.aconfig",
    "hap.aconfig",
    "hfp.aconfig",
    "hid.aconfig",
    "l2cap.aconfig",
    "le_advertising.aconfig",
    "leaudio.aconfig",
    "map.aconfig",
    "mapclient.aconfig",
    "mcp.aconfig",
    "metric.aconfig",
    "opp.aconfig",
    "pairing.aconfig",
    "ranging.aconfig",
    "rfcomm.aconfig",
    "rnr.aconfig",
    "sdp.aconfig",
    "security.aconfig",
    "sniff.aconfig",
    "sockets.aconfig",
    "system_service.aconfig",
    "vcp.aconfig",
    "vsc.aconfig",
  ]
  # LINT.ThenChange(/flags/Android.bp)
  package = "com.android.bluetooth.flags"
  deps = [ "//bt/floss/libflags:libflags" ]
}
