#
#  Copyright 2024 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

config("log_defaults") {
  include_dirs = [
    "//bt/system/log/include",
  ]
}

static_library("libbluetooth_log") {
  cflags = [
     "-fvisibility=default",
  ]
  sources = [
    "include/bluetooth/log.h",
    "src/truncating_buffer.h",
    "src/vlog_syslog.cc",
  ]
  configs += [
    "//bt/system:target_defaults",
    ":log_defaults",
  ]
}
