#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[package]
name = "bt_topshim"
version = "0.0.1"
edition = "2018"
build = "build.rs"

[dependencies]
# BT dependencies
bt_common = { path = "../common" }
topshim_macros = { path = "macros" }

cxx = "1.0"
grpcio = { version = "0.13.0", default-features = false, features = ["protobufv3-codec", "openssl"] }
lazy_static = "1.4"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
proc-macro2 = "1.0"
tokio = { version = "1", features = ['bytes', 'fs', 'io-util', 'libc', 'macros', 'mio', 'net', 'num_cpus', 'rt', 'rt-multi-thread', 'sync', 'time', 'tokio-macros'] }
tokio-stream = "0.1"
bitflags ="2.4.0"

[build-dependencies]
bindgen = "0.64"
pkg-config = "0.3"

[lib]
path = "src/lib.rs"
